# coolq-cpp-sdk

./: .appveyor.yml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  PermissionCode.md  README.md  app.json  app_id.txt  build_debug.bat  build_envir.bat  build_release.bat  com.example.demo.json  vcpkg-requirements.txt
cmake/: x86-windows-static-custom.cmake
demo/: README.md  demo.sln
demo/demo/: appmain.cpp  appmain.h  com.example.democ.json  demo.vcxproj  stdafx.cpp  stdafx.h
lib/: cqp.hpp
scripts/: check_env.ps1  clean.ps1  generate.ps1  generate_hpp.py  generate_lib.py  helpers.ps1  post_build.ps1  prepare.ps1  prepare_prebuilt.ps1  size_tbl.py
src/: demo.cpp
